--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ install:
 script:
   - black --check .
   - flake8 --max-line-length=88 .
+  - coverage run manage.py test
+  
+after_scripts:
+  - coveralls
 
 deploy:
   provider: elasticbeanstalk
