--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ install:
 script:
   - black --check .
   - flake8 --max-line-length=88 .
-  - coverage run manage.py test
-  
+  - coverage run --source='mysite' manage.py test polls
 after_scripts:
   - coveralls
 
