--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ install:
 script:
   - black --check .
   - flake8 --max-line-length=88 .
-  - coverage run --source='mysite' manage.py test polls
+ - coverage run --source='mysite' mysite/manage.py test polls
+ 
 after_scripts:
   - coveralls
 
