--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,7 +1,45 @@
-Django==2.2
-pytz==2024.2
-sqlparse==0.4.4
-flake8
+attrs
+awsebcli
+bcrypt
+blessed
+botocore
 black
-coveralls
+cached-property
+cement
+certifi
+cffi
+chardet
+charset-normalizer
+colorama
 coverage
+coveralls
+cryptography
+Django
+docker
+docker-compose
+dockerpty
+docopt
+docutils
+flake8
+future
+git-remote-codecommit
+idna
+jmespath
+jsonschema
+paramiko
+pathspec
+pycparser
+PyNaCl
+pyrsistent
+python-dateutil
+pytz
+PyYAML
+requests
+semantic-version
+six
+sqlparse
+termcolor
+texttable
+urllib3
+wcwidth
+websocket-client
