--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 install:
   - pip install -r mysite/requirements.txt
-
+  - python -m pip install --upgrade setuptools==70.0.0
+  - python -m pip install black flake8 coverage coveralls
+  - python -m pip install urllib3==1.26.6
+  
 script:
   - black --check .
   - flake8 --max-line-length=88 .
