--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 install:
-  - pip install -r mysite/requirements.txt
+  - pip install -r requirements.txt
   - python -m pip install black flake8 coverage coveralls
   - python -m pip install urllib3==1.26.6
   
