--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
   - black --check .
   - flake8 --max-line-length=88 .
   - export DJANGO_SETTINGS_MODULE=mysite.settings
-  - coverage run --source='mysite' mysite/manage.py test polls
+  - coverage run --source='mysite' manage.py test polls
  
 after_scripts:
   - coveralls
